# rubiks-clifford-synthesis

./: Analysis Notebook.ipynb  Cl(2) Graph Notebook.ipynb  Data Analysis Notebook.ipynb  LICENSE  Playground Notebook.ipynb  README.md  beam-search.ipynb  clifford.py  job_manager.py  lgf.py  pyproject.toml  requirements.txt  setup.py  train.py
rubiks/: clifford.py  lgf.py  train.py
tests/: test_clifford.py
